<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/game_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="20dp"
	    android:text="@string/app_name"
	    android:textSize="28sp" />

    <Button
        android:id="@+id/pay"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/a8_login_btn_bg_selector"
        android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/pay"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/sharetxt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/a8_login_btn_bg_selector"
        android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/sharetxt"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/shareimg"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/a8_login_btn_bg_selector"
        android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/shareimg"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/shareweb"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/a8_login_btn_bg_selector"
        android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/shareweb"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/logout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/a8_login_btn_bg_selector"
        android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/logout"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/log"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:textSize="16sp" />

</LinearLayout>